dev/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-dashboard
  namespace: hospital-dashboard
spec:
  selector:
    app: hospital-dashboard
  ports:
  - port: 80
    targetPort: 80
