dev/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hospital-dashboard
  namespace: hospital-dashboard
spec:
  to:
    kind: Service
    name: hospital-dashboard
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
